<resources>
    <string name="app_name">Onboarding Task Android</string>

    <!-- label -->
    <string name="label_login">로그인</string>
    <string name="label_auto_login">자동 로그인</string>
    <string name="label_keep_login">로그인 상태 유지</string>
    <string name="label_logout">로그아웃</string>
    <string name="label_signup">회원가입</string>
    <string name="label_withdraw">회원탈퇴</string>
    <string name="label_email">이메일</string>
    <string name="label_password">비밀번호</string>
    <string name="label_name">이름</string>

    <!-- login -->
    <string name="login_subtitle">돌아오신 걸 환영합니다.</string>

    <!-- signup -->
    <string name="signup_check_email_duplicated">중복 확인</string>
    <string name="signup_email_not_exist">사용 가능한 이메일입니다.</string>
    <string name="signup_subtitle">정보를 입력해주세요.</string>

    <!-- user -->
    <string name="user_emoji_handshake">👋</string>
    <string name="user_greetings">안녕하세요, %s 님</string>
    <string name="user_email">이메일: %s</string>

    <!-- hint -->
    <string name="hint_email">이메일 입력</string>
    <string name="hint_password">비밀번호 입력</string>
    <string name="hint_password_check">비밀번호 확인</string>
    <string name="hint_username">이름 입력</string>

    <!-- error -->
    <string name="error_empty_all">모든 항목을 입력해주세요.</string>
    <string name="error_email_empty">이메일을 입력해주세요.</string>
    <string name="error_email_not_checked">이메일 중복 확인을 해주세요.</string>
    <string name="error_email_duplicated">중복된 이메일입니다.</string>
    <string name="error_email_regex">이메일 형식을 확인해주세요.</string>
    <string name="error_password_empty">비밀번호를 입력해주세요.</string>
    <string name="error_password_check">비밀번호가 일치하지 않습니다.</string>
    <string name="error_password_regex">비밀번호는 영문 소문자, 대문자, 숫자를 포함해 8자 이상이어야 합니다.</string>
    <string name="error_access">잘못된 접근입니다.</string>

    <!-- content description -->
    <string name="description_back">이전으로</string>
</resources>